added link, images

--- a/Lektion01/Link.html
+++ b/Lektion01/Link.html
@@ -27,7 +27,9 @@
     <h2>Relativa länkar</h2>
     <a href="Image/Image.png"> Länk till en lokal bild</a> <br>
     <a href="blockelement.html"> Exempel på blockelement</a> <br>
-    <a href="JAVA22-Uppgift-1.pdf"> PDF exempel</a>
+    <a href="JAVA22-Uppgift-1.pdf"> PDF exempel</a> <br>
+    <!-- Fungera endast med live server att lada ner-->
+    <a href="JAVA22-Uppgift-1.pdf" download> Ladda ner</a> 
 
    
     
