added mailto in link and jump to in blockelement

--- a/Lektion01/Link.html
+++ b/Lektion01/Link.html
@@ -11,9 +11,11 @@
 
     <h2>Absoluta länkar (externa)</h2>
     <!--man måste ange protokoll vid externa länkar, d.v.s. https//:-->
-    <a href="https://studentportal.nackademin.se/course/view.php?id=4331" target="_blank">
+    <a href="https://studentportal.nackademin.se/course/view.php?id=4331" target="_blank"> <!--with target="_blank it will bring you to a new page-->
         studentportal
     </a>
+    <br>
+    <a href="mailto:amyling.wang@gmail.com">Email me</a> 
     <br>
     <!--target kan placeras innan href-->
     <a target= "_blank" href="https://studentportal.nackademin.se/course/view.php?id=4331">
