--- a/Lektion01/list.html
+++ b/Lektion01/list.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Listor</h1>
     <h2>Punktlistor</h2>
 
     <ul>
-        <li>Smör</li>
-        <li>Bröd</li>
-        <li>Mjölk</li>
+      <li>Smör</li>
+      <li>Bröd</li>
+      <li>Mjölk</li>
     </ul>
     <h2>Numrerade Listor</h2>
     <ol>
-        <li>HIML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
+      <li>HIML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
     </ol>
-    
-</body>
+  </body>
 </html>
