--- a/Lektion03/bootstrap.html
+++ b/Lektion03/bootstrap.html
@@ -110,7 +110,21 @@
         </div>
 
 
-        
+         <!--Toggel-->
+         <button class = "btn btn-primary" data-bs-toggle="collapse"
+         data-bs-target=".row" aria-expanded="false"
+         aria-controls="row">Toggel</button> 
+        <div class="row collapse" id="row">
+            <div class="col">
+                <div class="box">hej hej</div>
+            </div>
+        </div>
+
+        <div class="row collapse" id="row">
+            <div class="col">
+                <div class="box">hej hej</div>
+            </div>
+        </div>
 
     
     </div>
