--- a/Lektion03/bootstrap2.html
+++ b/Lektion03/bootstrap2.html
@@ -9,22 +9,23 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
-        <!--Toggel-->
-        <button class = "btn btn-primary" data-bs-toggle="collapse"
-         data-bs-target=".row" aria-expanded="false"
-         aria-controls="row">Toggel</button> 
-        <div class="row collapse" id="row">
-            <div class="col">
-                <div class="box">hej hej</div>
-            </div>
-        </div>
+    <nav class="navbar navbar-expand navbar-dark bg-dark" > <!--style="background-color: aqua;"kan be used to change the background color-->
+        <div class="container">
+            <a href="#" class="navbar navbar-brand">Brand</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="#" class="nav-link active" aria-current="page">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link disabled" aria-current="page">Store</a>
+                </li>
 
-        <div class="row collapse" id="row">
-            <div class="col">
-                <div class="box">hej hej</div>
-            </div>
+            </ul>
+            <div class="navbar-text">Test</div>
         </div>
+    </nav>
+    <div class="container">
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, enim? Sunt adipisci corrupti, voluptates vitae illum aspernatur quam debitis iusto labore? Molestiae, temporibus dolorum nostrum architecto maxime dicta incidunt corrupti?
     </div>
     
 </body>
